[package]
authors = ["Alessio Artoni"]
categories = ["web-programming::http-server"]
description = "HTTP interface to the a Neo4j database, providing data required by sixdegreesoffrontend."
edition = "2024"
keywords = ["api", "Neo4j", "PGP", "six-degrees", "six-degrees-of-separation"]
license = "Unlicense"
name = "sixdegreesofapi"
readme = "README.md"
repository = "https://github.com/aartoni/sixdegreesofapi"
rust-version = "1.85.0"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
dotenvy = "0.15.7"
neo4rs = "0.8.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints.clippy]
cargo = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 2 }
pedantic = "warn"
nursery = "warn"
